# le-mystere-professeur-zacus

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEX_RULES.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  GIT_WRITE_OPS_DETAILED_CHANGES.md  GIT_WRITE_OPS_FINAL_REPORT.md  LICENSE-CONTENT.md  LICENSE.md  Makefile  README.md  README_ULTRA_MARKETING.md  SECURITY.md  SESSION_SUMMARY_CODEX_EXPERT.md  consolidate_simple.sh  hw_now.sh  mkdocs.yml
.codex/: config.toml
.github/: AGENTS.md  PULL_REQUEST_TEMPLATE.md
LICENSES/: CC-BY-NC-4.0.txt  CC-BY-SA-4.0.txt  GPL-3.0-or-later.txt  MIT.txt
PLIP_FIRMWARE/: .gitignore  CLAUDE.md  README.md  platformio.ini
agents/: openai.yaml
architecture/: CONVERSATION_BUNDLE_ARCHITECTURE.md  ZIP_PR_ARCH_TODO.md
audio/: AGENTS.md  README.md
desktop/: .gitignore  CLAUDE.md  electron-builder.yml  package-lock.json  (+5 more)
hardware/firmware/lib/zacus_story_gen_ai/: README.md  pyproject.toml
hardware/firmware/lib/zacus_story_gen_ai/src/zacus_story_gen_ai/: __init__.py  cli.py  generator.py
hardware/firmware/lib/zacus_story_gen_ai/src/zacus_story_gen_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
hardware/firmware/lib/zacus_story_gen_ai/src/zacus_story_gen_ai/schemas/: game_scenario_schema.yamale  scenario_template_schema.yamale  story_spec_schema.yamale
hardware/firmware/lib/zacus_story_gen_ai/src/zacus_story_gen_ai/templates/: apps_gen.cpp.j2  apps_gen.h.j2  scenarios_gen.cpp.j2  scenarios_gen.h.j2
hardware/firmware/lib/zacus_story_gen_ai/tests/: test_generator.py
(+1992 files in other folders)
